[gd_scene load_steps=6 format=3 uid="uid://dpa6s8m1h8yyd"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_yftty"]
[ext_resource type="FontFile" uid="uid://c4aulvc2mschk" path="res://Assets/VT323-Regular.ttf" id="2_4y8q2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_13snx"]
bg_color = Color(0.803922, 0, 0.0588235, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b150e"]
bg_color = Color(0, 0.662745, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_seuvk"]
bg_color = Color(1, 0.721569, 0, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_yftty")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LifesLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_4y8q2")
theme_override_font_sizes/font_size = 32
text = "Lifes : 5"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelCounter" type="Label" parent="MarginContainer/HBoxContainer2"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_4y8q2")
theme_override_font_sizes/font_size = 40
text = "Level: 1"
horizontal_alignment = 2

[node name="GameOverContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameOverContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_13snx")

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameOverContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "GAME OVER LUL"
horizontal_alignment = 1

[node name="GameLostButton" type="Button" parent="GameOverContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "RESTART GAME"

[node name="LevelWonContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="LevelWonContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_b150e")

[node name="VBoxContainer" type="VBoxContainer" parent="LevelWonContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "too easy?"
horizontal_alignment = 1

[node name="LevelWonButton" type="Button" parent="LevelWonContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "yep"

[node name="GameCompleteContainer" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GameCompleteContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_seuvk")

[node name="VBoxContainer" type="VBoxContainer" parent="GameCompleteContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="GameCompleteContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Congrats!!!!"
horizontal_alignment = 1

[node name="GameWonButton" type="Button" parent="GameCompleteContainer/Panel/VBoxContainer"]
layout_mode = 2
text = "Restart game"

[connection signal="pressed" from="GameOverContainer/Panel/VBoxContainer/GameLostButton" to="." method="_on_game_lost_button_pressed"]
[connection signal="pressed" from="LevelWonContainer/Panel/VBoxContainer/LevelWonButton" to="." method="_on_level_won_button_pressed"]
[connection signal="pressed" from="GameCompleteContainer/Panel/VBoxContainer/GameWonButton" to="." method="_on_game_won_button_pressed"]
